Merged integration tests